# ByKC

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  README_zh.md  docker-compose.kb-stack.yml  pylintrc  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
docker/minio/init/: init-minio.sh
docker/opengauss/custom/: Dockerfile
docker/opengauss/init/: init-opengauss.sh
docs/modules/: api-integration-test-plan.md
docs/modules/instant-qa/: design.md  framework.md  process.md
docs/modules/knowledge/: api.md  design.md  framework.md  metadata_api.md  metadata_business_api_deprecated.md  minio.md  process.md  refactor-cleanup.md
docs/modules/knowledge-base/: api.md  design.md  framework.md  minio.md
docs/modules/knowledge-build/: api.md  design.md  framework.md  process.md
docs/superpowers/plans/: 2026-07-09-stable-markdown-reference-and-move-api-plan.md
docs/superpowers/specs/: 2026-04-17-llm-service-factory-design.md  2026-07-08-stable-markdown-resource-reference-design.md
eval/: __init__.py  cli.py  judge.py  models.py  runner.py
eval/datasets/: __init__.py  base.py
eval/datasets/frames/: __init__.py  download.py  ingest.py  loader.py
examples/e2e_kb_qa/: README.md  __init__.py  common.py  run_instant_qa.py  run_kb_flow.py  start_kb_service.sh
scripts/: entrypoint.sh  reset_kb_data.py  reset_kb_stack.sh  test_concurrent_async.py  verify_kb_stack.sh
scripts/knowledge_base/: run_integration_tests.sh  run_unit_tests.sh
scripts/knowledge_build/: run_unit_tests.sh
scripts/qa/: run_unit_tests.sh
sql/knowledge_base/: 001_knowledge_base.sql  002_knowledge_fs_entry.sql  004_knowledge_item.sql  005_knowledge_item_version.sql  008_retrieval_projection.sql  009_knowledge_fs_entry_indexes.sql  012_knowledge_item_chunk_indexes.sql  013_retrieval_projection_indexes.sql  014_embedding_table.sql.tpl
src/by_qa/: __init__.py  config.py  main.py
src/by_qa/core/: __init__.py  exceptions.py  framework_client.py  logger.py  model_config.py
src/by_qa/knowledge_base/: __init__.py  build_status.py  metadata_types.py
src/by_qa/knowledge_build/: __init__.py  runtime.py
src/by_qa/knowledge_common/: __init__.py  exceptions.py  kb_path_utils.py  markdown_reference.py  schemas.py  text_segmentation.py
src/by_qa/qa/: __init__.py
tests/core/: test_framework_client.py
tests/knowledge_base/integration/: _metadata_helpers.py  _userfs_provider.py  test_kb_api_integration.py  test_kb_api_stateful_integration.py  test_metadata_api_integration.py  test_userfs_batch1.py  test_userfs_batch2.py  test_userfs_batch3.py
tests/knowledge_base/scripts/: test_reset_kb_data.py  test_reset_kb_stack.py
tests/knowledge_base/unit/: test_database_dsn.py  test_document_update_schemas.py  test_document_update_service.py  test_dsl_compiler.py  test_dsl_validator.py  test_embedding_query_service.py  test_entrypoint.py  test_file_metadata_query_service.py  test_file_metadata_service.py  test_file_metadata_value_repository.py  test_ingestion_front_matter.py  test_kb_api_models.py  test_kb_api_routes.py  test_kb_bootstrap_service.py  test_kb_config.py  test_kb_fetch_cache_cleanup_service.py  test_kb_import_service.py  test_kb_repository.py  test_kb_search_service.py  test_knowledge_base_service_move.py  test_knowledge_base_service_read_file.py  test_knowledge_directory_delete_references.py  test_knowledge_file_reference_repository.py  test_knowledge_file_update_timeline_repository.py  test_knowledge_fs_entry_repository.py  test_knowledge_item_delete_references.py  test_knowledge_item_ingestion_service.py  test_knowledge_item_search_repository.py  test_knowledge_reference_query.py  test_main_entrypoint_async.py  test_main_module_loading.py  test_markdown_reference_resolver.py  test_markdown_reference_rewriter.py  test_markdown_update_summary_service.py  test_metadata_dsl_compiler.py  test_metadata_property_repository.py  test_metadata_property_service.py  test_metadata_search_repository.py  test_metadata_search_service.py  test_metadata_types_constants.py  (+10 more)
tests/knowledge_build/integration/: test_api_integration.py
tests/knowledge_build/unit/: test_api_routes.py  test_document_chunking_service.py  test_runtime.py
tests/knowledge_common/: test_kb_path_utils.py  test_markdown_reference.py  test_text_segmentation.py
tests/packaging/: conftest.py  test_ci_workflow.py  test_e2e_examples.py  test_e2e_instant_qa_script.py  test_optional_dependencies.py
(+221 files in other folders)
