[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "by-qa"
version = "0.1.0"
description = "Open-source knowledge-base ingestion and retrieval service."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "AI Assistant"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["knowledge-base", "rag", "fastapi", "opengauss", "minio"]
dependencies = [
    "fastapi>=0.115.0",
    "minio>=7.2.15",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "uvicorn[standard]>=0.32.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "openpyxl>=3.1.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
by-qa = "by_qa.main:main"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "pyink>=24.10.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/by_qa"]
