[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "by-qa"
version = "0.1.12"
description = "Open-source knowledge-base ingestion and retrieval service."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "AI Assistant"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["knowledge-base", "rag", "fastapi", "opengauss", "minio"]
dependencies = [
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
by-qa = "by_qa.main:main"

[project.optional-dependencies]
knowledge = [
    "fastapi>=0.115.0",
    "aioboto3>=13.0.0",
    "psycopg[binary]>=3.2.0",
    "python-multipart==0.0.27",
    "uvicorn[standard]>=0.32.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "openpyxl>=3.1.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.2",
    "jieba>=0.42.1",
    "by-framework>=0.1.10",
    "lxml==6.1.0",
    "urllib3==2.7.0"
]
qa = [
    "langchain>=0.3.0",
    "langchain-core==1.3.3",
    "langchain-openai>=0.2.0",
    "langgraph==1.1.6",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "aiosqlite>=0.20.0",
    "by-framework>=0.1.10",
    "json_repair==0.52.2",
    "langsmith==0.8.0",
    "lxml==6.1.0",
    "urllib3==2.7.0"
]
all = [
    "fastapi>=0.115.0",
    "aioboto3>=13.0.0",
    "psycopg[binary]>=3.2.0",
    "python-multipart==0.0.27",
    "uvicorn[standard]>=0.32.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "openpyxl>=3.1.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.2",
    "langchain>=0.3.0",
    "langchain-core==1.3.3",
    "langgraph==1.1.6",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "aiosqlite>=0.20.0",
    "by-framework>=0.1.10",
    "json_repair==0.52.2",
    "jieba>=0.42.1",
    "langsmith==0.8.0",
    "lxml==6.1.0",
    "urllib3==2.7.0"
]
dev = [
    "pre-commit>=4.0.0",
    "pyink>=24.10.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]
eval = [
    "beautifulsoup4>=4.12.0",
    "datasets>=3.2.0",
    "markdownify>=0.14.0",
    "requests>=2.32.0",
    "tqdm>=4.67.0",
]

[tool.hatch.build.targets.sdist]
exclude = ["data*/", "datasets/", "build_data/", "scripts/", "tests/", "docs/", "examples/"]

[tool.hatch.build.targets.wheel]
packages = ["src/by_qa"]
